--- a/light.css
+++ b/light.css
@@ -6,8 +6,8 @@ html[data-theme=light] {
     --ls-primary-background-color: var(--nord6);
     --ls-secondary-background-color: var(--nord5);
     --ls-tertiary-background-color: var(--nord4);
-    --ls-quaternary-background-color: #dcdcdc;
-    --ls-table-tr-even-background-color: #f7f7f7;
+    --ls-quaternary-background-color: var(--nord4);
+    --ls-table-tr-even-background-color: var(--nord5);
     --ls-active-primary-color: var(--nord8);
     --ls-active-secondary-color: var(--nord9);
     --ls-block-properties-background-color: var(--nord5);
@@ -45,7 +45,7 @@ html[data-theme=light] {
     --ls-scrollbar-thumb-hover-color: rgba(0, 0, 0, 0.2);
     --ls-head-text-color: var(--ls-link-text-color);
     --ls-cloze-text-color: #0000cd;
-    --ls-icon-color: #908e8b;
+    --ls-icon-color: var(--nord10);
     --ls-search-icon-color: var(--ls-icon-color);
     --ls-a-chosen-bg: #f7f7f7;
     --ls-right-sidebar-code-bg-color: var(--ls-secondary-background-color);
