Fix light theme value

--- a/light.css
+++ b/light.css
@@ -44,7 +44,7 @@ html[data-theme=light] {
     --ls-scrollbar-background-color: rgba(0, 0, 0, 0.05);
     --ls-scrollbar-thumb-hover-color: rgba(0, 0, 0, 0.2);
     --ls-head-text-color: var(--ls-link-text-color);
-    --ls-cloze-text-color: #0000cd;
+    --ls-cloze-text-color: var(--nord7);
     --ls-icon-color: var(--nord10);
     --ls-search-icon-color: var(--ls-icon-color);
     --ls-a-chosen-bg: #f7f7f7;
