--- a/light.css
+++ b/light.css
@@ -52,6 +52,6 @@ html[data-theme=light] {
     --color-level-1: var(--ls-secondary-background-color);
     --color-level-2: var(--ls-tertiary-background-color);
     --color-level-3: var(--ls-quaternary-background-color);
-    --color-level-4: #d0e6fa;
+    --color-level-4: var(--nord5);
     --color-level-5: #bbdaf6;
     } 
